src/tests/snapshots/funky__tests__wasm__memory.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_I32_CONST(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_I32_LOAD(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 3,
                        instruction: OP_I32_CONST(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 4,
                        instruction: OP_I32_CONST(
                            2,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 5,
                        instruction: OP_I32_STORE(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 6,
                        instruction: OP_I32_CONST(
                            65536,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 7,
                        instruction: OP_I32_LOAD(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 8,
                        instruction: OP_I32_CONST(
                            65536,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 9,
                        instruction: OP_I32_CONST(
                            3,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 10,
                        instruction: OP_I32_STORE(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 11,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 12,
                        instruction: OP_MEMORY_GROW,
                    },
                ],
            },
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 13,
                        instruction: OP_MEMORY_SIZE,
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [],
                return_types: [
                    I32,
                ],
            },
            FunctionSignature {
                param_types: [],
                return_types: [],
            },
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            FuncAddr(
                0,
            ),
            FuncAddr(
                1,
            ),
            FuncAddr(
                2,
            ),
            FuncAddr(
                3,
            ),
            FuncAddr(
                4,
            ),
            FuncAddr(
                5,
            ),
        ],
        tableaddrs: [],
        memaddrs: [
            0,
        ],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "load_at_zero",
                value: Function {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "store_at_zero",
                value: Function {
                    ty: 1,
                },
            },
            ExportInstance {
                name: "load_at_page_size",
                value: Function {
                    ty: 2,
                },
            },
            ExportInstance {
                name: "store_at_page_size",
                value: Function {
                    ty: 3,
                },
            },
            ExportInstance {
                name: "grow",
                value: Function {
                    ty: 4,
                },
            },
            ExportInstance {
                name: "size",
                value: Function {
                    ty: 5,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_I32_CONST(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_I32_LOAD(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 3,
                            instruction: OP_I32_CONST(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 4,
                            instruction: OP_I32_CONST(
                                2,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 5,
                            instruction: OP_I32_STORE(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 6,
                            instruction: OP_I32_CONST(
                                65536,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 7,
                            instruction: OP_I32_LOAD(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 8,
                            instruction: OP_I32_CONST(
                                65536,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 9,
                            instruction: OP_I32_CONST(
                                3,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 10,
                            instruction: OP_I32_STORE(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 11,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 12,
                            instruction: OP_MEMORY_GROW,
                        },
                    ],
                },
            },
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 13,
                            instruction: OP_MEMORY_SIZE,
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 0,
                max: None,
            },
        ],
        stack: [],
        ctrl_stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
