src/tests/snapshots/funky__tests__wasm__return_i64.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_I64_CONST(
                            -1000,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 3,
                        instruction: OP_I64_STORE(
                            MemArg {
                                align: 2,
                                offset: 0,
                            },
                        ),
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                ],
                return_types: [],
            },
        ],
        funcaddrs: [
            FuncAddr(
                0,
            ),
        ],
        tableaddrs: [],
        memaddrs: [
            0,
        ],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "memory",
                value: Memory {
                    ty: 0,
                },
            },
            ExportInstance {
                name: "is_greater",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                    ],
                    return_types: [],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_I64_CONST(
                                -1000,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 3,
                            instruction: OP_I64_STORE(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [
            MemoryInstance {
                data (only length): 1114112,
                max: None,
            },
        ],
        stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
