src/tests/snapshots/funky__tests__wasm__sub.wasm.snap
---
source: src/tests/wasm.rs
expression: "format!(\"{:#?}\", engine)"

---
Engine {
    module: ModuleInstance {
        start: 0,
        code: [
            FunctionBody {
                locals: [],
                code: [
                    InstructionWrapper {
                        instruction_id: 1,
                        instruction: OP_LOCAL_GET(
                            0,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 2,
                        instruction: OP_LOCAL_GET(
                            1,
                        ),
                    },
                    InstructionWrapper {
                        instruction_id: 3,
                        instruction: OP_I32_SUB,
                    },
                ],
            },
        ],
        fn_types: [
            FunctionSignature {
                param_types: [
                    I32,
                    I32,
                ],
                return_types: [
                    I32,
                ],
            },
        ],
        funcaddrs: [
            FuncAddr(
                0,
            ),
        ],
        tableaddrs: [],
        memaddrs: [],
        globaladdrs: [],
        exports: [
            ExportInstance {
                name: "sub",
                value: Function {
                    ty: 0,
                },
            },
        ],
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                code: FunctionBody {
                    locals: [],
                    code: [
                        InstructionWrapper {
                            instruction_id: 1,
                            instruction: OP_LOCAL_GET(
                                0,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 2,
                            instruction: OP_LOCAL_GET(
                                1,
                            ),
                        },
                        InstructionWrapper {
                            instruction_id: 3,
                            instruction: OP_I32_SUB,
                        },
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        ctrl_stack: [],
        globals: [],
    },
    debugger: RelativeProgramCounter(
        0,
    ),
}
